[workspace]
workspace.resolver = "2"
members = [
    "2022/day-01-calorie-counting",
    "2022/day-02-rock-paper-scissors",
    "2022/day-03-rucksack-reorganization",
    "2022/day-04-camp-cleanup",
    "2022/day-05-supply-stacks",
    "2022/day-06-tuning-trouble",
    "2022/day-07-no-space-left-on-device",
    "2022/day-08-treetop-tree-house",
    "2022/day-09-rope-bridge",
    "2022/day-10-cathode-ray-tube",
    "2022/day-11-monkey-in-the-middle",
    "2022/day-12-hill-climbing-algorithm",
    "2022/day-13-distress-signal",
    "2022/day-14-regolith-reservoir",
    "2022/day-15-beacon-exclusion-zone",
    "2022/day-18-boiling-boulders",
    "2022/day-20-grove-positioning-system",
    "2022/day-23-unstable-diffusion",
    "2022/day-25-full-of-hot-air",
    "2024/day-01-historian-hysteria",
    "2024/day-02-red-nosed-reports",
    "2024/day-03-mull-it-over",
    "2024/day-04-ceres-search",
]
